This is phplotdocs/ChangeLog, listing changes to the PHPlot Reference Manual
-----------------------------------------------------------------------------
Note: This is a more complete ChangeLog than the one in Appendix A of the
manual, which only contains summaries of changes.
-----------------------------------------------------------------------------
* 2012-04-02
    * changelog.xml: Missing change from 2012-03-31

* 2012-03-31
    * Feature request #3501500 "Looping plot section":
      + advanced.xml: New section on streaming plots.
      + developer.xml: Document new internal DisableCaching().
      + functions.xml: Add links to 3 new functions. Move EncodeImage.
      + reference.xml: Document 3 new functions StartStream(),
        PrintImageFrame(), and EndStream(), for producing plot streams.
      + variables.list: List 3 new class variables used for streaming

* 2012-03-30
    * reference.xml: Fix out-of-order reference SetDataValueLabelColor().
      Fix typo in DrawMessage()

* 2012-03-26
    * developer.xml: Document usage change for internal functions
      DrawXTick() and DrawYTick().

* 2012-03-24
    * Feature request #3488042 "Display only some data value labels":
      Document new feature that passes $row or $row, $column to custom label
      formatting functions.
      + developer.xml: Document new usage for internal functions
        CheckDataValueLabels(), DrawDataValueLabel(), DrawXDataLabel(),
        DrawYDataLabel(), and FormatLabel().
      + reference.xml: Changed SetXLabelType(), SetXDataLabelType(),
        SetYLabelType(), and SetYDataLabelType() (same changes to all 4) -
        document new arguments to custom formatting callbacks, and link to
        new Concepts sections.
      + concepts.xml: Expand sections on label formatting.
      + examples.xml: Add new example of custom label formatting.
      + examples/dlexformat.php: New example of custom label formatting.
      + Makefile: Add new files for dlexformat example.